@@ -6,12 +6,9 @@ import android.graphics.Color;
 import android.graphics.Typeface;
 import android.os.AsyncTask;
 import android.support.v7.widget.RecyclerView;
-import android.view.Display;
-import android.view.Gravity;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.view.WindowManager;
 import android.widget.HorizontalScrollView;
 import android.widget.ImageView;
 import android.widget.LinearLayout;
@@ -19,19 +16,22 @@ import android.widget.TextView;
 
 import com.squareup.picasso.Picasso;
 
+import org.json.JSONArray;
+import org.json.JSONException;
+import org.json.JSONObject;
+
 import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 import appcorp.mmb.R;
-import appcorp.mmb.activities.user.Authorization;
 import appcorp.mmb.activities.other.FullscreenPreview;
-import appcorp.mmb.activities.search_feeds.Search;
-import appcorp.mmb.activities.feeds.HairstyleFeed;
 import appcorp.mmb.activities.search_feeds.SearchHairstyleMatrix;
 import appcorp.mmb.activities.user.SignIn;
 import appcorp.mmb.classes.FireAnal;
@@ -45,47 +45,20 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
     private List<HairstyleDTO> data;
     private List<Long> likes = new ArrayList<>();
     private Context context;
-    int width, height;
 
     public HairstyleFeedListAdapter(List<HairstyleDTO> data, Context context) {
         this.data = data;
         this.context = context;
 
         Storage.init(context);
-        initLocalization(Intermediates.getInstance().convertToString(context, R.string.translation));
-        initScreen();
         initFirebase();
 
-        width = Storage.getInt("Width", 480);
-        height = width;
         if (!Storage.getString("E-mail", "").equals(""))
             new CheckLikes(Storage.getString("E-mail", "")).execute();
     }
 
-    private void initScreen() {
-        Display display;
-        int width, height;
-        display = ((WindowManager) context
-                .getSystemService(context.WINDOW_SERVICE))
-                .getDefaultDisplay();
-        width = display.getWidth();
-        height = (int) (width * 0.75F);
-        Storage.addInt("Width", width);
-        Storage.addInt("Height", height);
-    }
-
     private void initFirebase() {
         FireAnal.setContext(context);
-    }
-
-    private void initLocalization(final String translation) {
-        if (translation.equals("English")) {
-            Storage.addString("Localization", "English");
-        }
-
-        if (translation.equals("Russian")) {
-            Storage.addString("Localization", "Russian");
-        }
     }
 
     @Override
@@ -100,23 +73,23 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
 
         if (position == data.size() - 1) {
             if (data.size() - 1 % 100 != 8)
-                HairstyleFeed.addFeed(data.size() / 100 + 1);
+                new Load(data.size() / 100 + 1).execute();
         }
 
-        final String SHOW = Intermediates.getInstance().convertToString(context, R.string.show_more_container);
-        final String HIDE = Intermediates.getInstance().convertToString(context, R.string.hide_more_container);
+        final String SHOW = Intermediates.convertToString(context, R.string.show_more_container);
+        final String HIDE = Intermediates.convertToString(context, R.string.hide_more_container);
 
         String[] date = item.getAvailableDate().split("");
 
         holder.title.setText(item.getAuthorName());
         holder.availableDate.setText(date[1] + date[2] + "-" + date[3] + date[4] + "-" + date[5] + date[6] + " " + date[7] + date[8] + ":" + date[9] + date[10]);
-        holder.likesCount.setText("" + item.getLikes());
+        holder.likesCount.setText(String.valueOf(item.getLikes()));
 
         if (!likes.contains(item.getId())) {
             holder.addLike.setBackgroundResource(R.mipmap.ic_heart_outline);
         } else {
             holder.addLike.setBackgroundResource(R.mipmap.ic_heart);
-            holder.likesCount.setText("" + (item.getLikes() + 1));
+            holder.likesCount.setText(String.valueOf(item.getLikes() + 1));
         }
 
         holder.addLike.setOnClickListener(new View.OnClickListener() {
@@ -126,12 +99,12 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                     if (!likes.contains(item.getId())) {
                         holder.addLike.setBackgroundResource(R.mipmap.ic_heart);
                         likes.add(item.getId());
-                        holder.likesCount.setText("" + (item.getLikes() + 1));
+                        holder.likesCount.setText(String.valueOf(item.getLikes() + 1));
                         new GetRequest("http://195.88.209.17/app/in/hairstyleLike.php?id=" + item.getId() + "&email=" + Storage.getString("E-mail", "")).execute();
                     } else if (likes.contains(item.getId())) {
                         holder.addLike.setBackgroundResource(R.mipmap.ic_heart_outline);
                         likes.remove(item.getId());
-                        holder.likesCount.setText("" + (new Long(holder.likesCount.getText().toString()) - 1));
+                        holder.likesCount.setText(String.valueOf(holder.likesCount.getText()));
                         new GetRequest("http://195.88.209.17/app/in/hairstyleDislike.php?id=" + item.getId() + "&email=" + Storage.getString("E-mail", "")).execute();
                     }
                 } else {
@@ -182,11 +155,11 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
         holder.countImages.removeAllViews();
         for (int i = 0; i < item.getImages().size(); i++) {
             ImageView screenShot = new ImageView(context);
-            screenShot.setMinimumWidth(width);
-            screenShot.setMinimumHeight(height);
+            screenShot.setMinimumWidth(Storage.getInt("Width", 480));
+            screenShot.setMinimumHeight(Storage.getInt("Width", 480));
             screenShot.setPadding(0, 0, 1, 0);
             screenShot.setBackgroundColor(Color.argb(255, 200, 200, 200));
-            Picasso.with(context).load("http://195.88.209.17/storage/images/" + item.getImages().get(i)).resize(width, height).onlyScaleDown().into(screenShot);
+            Picasso.with(context).load("http://195.88.209.17/storage/images/" + item.getImages().get(i)).resize(Storage.getInt("Width", 480), Storage.getInt("Width", 480)).onlyScaleDown().into(screenShot);
 
             screenShot.setScaleType(ImageView.ScaleType.CENTER_CROP);
             final int finalI = i;
@@ -205,7 +178,7 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
             holder.imageViewerHorizontal.scrollTo(0,0);
 
             LinearLayout countLayout = new LinearLayout(context);
-            countLayout.setLayoutParams(new ViewGroup.LayoutParams(width, height));
+            countLayout.setLayoutParams(new ViewGroup.LayoutParams(Storage.getInt("Width", 480), Storage.getInt("Width", 480)));
             TextView count = new TextView(context);
             count.setText("< " + (i + 1) + "/" + item.getImages().size() + " >");
             count.setTextSize(20);
@@ -231,38 +204,59 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                     moreContainer.setOrientation(LinearLayout.VERTICAL);
                     moreContainer.setPadding(32, 32, 32, 0);
 
-                    if (item.getHlenght().equals("short"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.shortHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "1"));
-                    else if (item.getHlenght().equals("medium"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.mediumHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "2"));
-                    else if (item.getHlenght().equals("long"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.longHairstyle), Typeface.DEFAULT_BOLD, 16, "Length", "3"));
+                    switch (item.getHlenght()) {
+                        case "short":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.shortHairstyle), 16, "Length", "1"));
+                            break;
+                        case "medium":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.mediumHairstyle), 16, "Length", "2"));
+                            break;
+                        case "long":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.longHairstyle), 16, "Length", "3"));
+                            break;
+                    }
 
-                    if (item.getHtype().equals("straight"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.straightHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "1"));
-                    else if (item.getHtype().equals("braid"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.braidHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "2"));
-                    else if (item.getHtype().equals("tail"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.tailHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "3"));
-                    else if (item.getHtype().equals("bunch"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.bunchHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "4"));
-                    else if (item.getHtype().equals("netting"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.nettingHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "5"));
-                    else if (item.getHtype().equals("curls"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.curlsHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "6"));
-                    else if (item.getHtype().equals("unstandart"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.unstandartHairstyleType), Typeface.DEFAULT_BOLD, 16, "Type", "7"));
+                    switch (item.getHtype()) {
+                        case "straight":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.straightHairstyleType), 16, "Type", "1"));
+                            break;
+                        case "braid":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.braidHairstyleType), 16, "Type", "2"));
+                            break;
+                        case "tail":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.tailHairstyleType), 16, "Type", "3"));
+                            break;
+                        case "bunch":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.bunchHairstyleType), 16, "Type", "4"));
+                            break;
+                        case "netting":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.nettingHairstyleType), 16, "Type", "5"));
+                            break;
+                        case "curls":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.curlsHairstyleType), 16, "Type", "6"));
+                            break;
+                        case "unstandart":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.unstandartHairstyleType), 16, "Type", "7"));
+                            break;
+                    }
 
-                    if (item.getHfor().equals("kids"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.forKids), Typeface.DEFAULT_BOLD, 16, "For", "1"));
-                    else if (item.getHfor().equals("everyday"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.forEveryday), Typeface.DEFAULT_BOLD, 16, "For", "2"));
-                    else if (item.getHfor().equals("wedding"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.forWedding), Typeface.DEFAULT_BOLD, 16, "For", "3"));
-                    else if (item.getHfor().equals("evening"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.forEvening), Typeface.DEFAULT_BOLD, 16, "For", "4"));
-                    else if (item.getHfor().equals("exclusive"))
-                        moreContainer.addView(createText(Intermediates.getInstance().convertToString(context, R.string.forExclusive), Typeface.DEFAULT_BOLD, 16, "For", "5"));
+                    switch (item.getHfor()) {
+                        case "kids":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forKids), 16, "For", "1"));
+                            break;
+                        case "everyday":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEveryday), 16, "For", "2"));
+                            break;
+                        case "wedding":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forWedding), 16, "For", "3"));
+                            break;
+                        case "evening":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forEvening), 16, "For", "4"));
+                            break;
+                        case "exclusive":
+                            moreContainer.addView(createText(Intermediates.convertToString(context, R.string.forExclusive), 16, "For", "5"));
+                            break;
+                    }
 
                     holder.moreContainer.addView(moreContainer);
                 } else if (holder.showMore.getText().equals(HIDE)) {
@@ -273,20 +267,20 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
         });
     }
 
-    private TextView createText(String title, Typeface tf, int padding, final String type, final String index) {
+    private TextView createText(String title, int padding, final String type, final String index) {
         TextView tw = new TextView(context);
-        tw.setText("" + title);
+        tw.setText(String.valueOf(title));
         tw.setPadding(0, padding, 0, padding);
         tw.setTextSize(14);
         tw.setTextColor(Color.argb(255, 50, 50, 50));
         tw.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
-                if (type == "Length") {
+                if (Objects.equals(type, "Length")) {
                     String[] length = context.getResources().getStringArray(R.array.hairstyleLength);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + length[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + length[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "" + index);
                     intent.putExtra("HairstyleType", "0");
@@ -294,11 +288,11 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                     context.startActivity(intent);
                     FireAnal.sendString("2", "HairstyleFeedParamLength", index);
                 }
-                if (type == "Type") {
+                if (Objects.equals(type, "Type")) {
                     String[] type = context.getResources().getStringArray(R.array.hairstyleType);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + type[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + type[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "0");
                     intent.putExtra("HairstyleType", "" + index);
@@ -306,11 +300,11 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                     context.startActivity(intent);
                     FireAnal.sendString("2", "HairstyleFeedParamType", index);
                 }
-                if (type == "For") {
+                if (Objects.equals(type, "For")) {
                     String[] hfor = context.getResources().getStringArray(R.array.hairstyleFor);
                     Intent intent = new Intent(context, SearchHairstyleMatrix.class);
                     intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                    intent.putExtra("Toolbar", "" + hfor[new Integer(index)]);
+                    intent.putExtra("Toolbar", "" + hfor[Integer.valueOf(index)]);
                     intent.putExtra("Request", "");
                     intent.putExtra("HairstyleLength", "0");
                     intent.putExtra("HairstyleType", "0");
@@ -320,7 +314,6 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                 }
             }
         });
-        //tw.setTypeface(tf);
         return tw;
     }
 
@@ -355,15 +348,14 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
         }
     }
 
-    public class CheckLikes extends AsyncTask<Void, Void, String> {
+    private class CheckLikes extends AsyncTask<Void, Void, String> {
 
-        HttpURLConnection connection = null;
-        BufferedReader reader = null;
-        String url = "";
-        String result = "";
-        String email = "";
+        private HttpURLConnection connection = null;
+        private BufferedReader reader = null;
+        private String result = "";
+        private String email = "";
 
-        public CheckLikes(String email) {
+        CheckLikes(String email) {
             this.email = email;
         }
 
@@ -376,7 +368,7 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
                 connection.connect();
                 InputStream inputStream = connection.getInputStream();
                 reader = new BufferedReader(new InputStreamReader(inputStream));
-                StringBuffer profileBuffer = new StringBuffer();
+                StringBuilder profileBuffer = new StringBuilder();
                 String profileLine;
                 while ((profileLine = reader.readLine()) != null) {
                     profileBuffer.append(profileLine);
@@ -391,9 +383,105 @@ public class HairstyleFeedListAdapter extends RecyclerView.Adapter<HairstyleFeed
         @Override
         protected void onPostExecute(String s) {
             String[] array = s.split(",");
-            for (int i = 0; i < array.length; i++) {
-                if (!array[i].equals(""))
-                    likes.add(new Long(array[i]));
+            for (String anArray : array) {
+                if (!anArray.equals(""))
+                    likes.add(Long.valueOf(anArray));
+            }
+        }
+    }
+
+    private class Load extends AsyncTask<Void, Void, String> {
+
+        private HttpURLConnection urlFeedConnection = null;
+        private BufferedReader reader = null;
+        private String resultJsonFeed = "";
+        private int position;
+
+        Load(int position) {
+            this.position = position;
+        }
+
+        @Override
+        protected String doInBackground(Void... params) {
+            try {
+                if (position == 1) {
+                    URL feedURL = new URL("http://195.88.209.17/app/static/hairstyle" + position + ".html");
+                    urlFeedConnection = (HttpURLConnection) feedURL.openConnection();
+                    urlFeedConnection.setRequestMethod("GET");
+                    urlFeedConnection.connect();
+                    InputStream inputStream = urlFeedConnection.getInputStream();
+                    reader = new BufferedReader(new InputStreamReader(inputStream));
+                    StringBuffer buffer;
+                    buffer = new StringBuffer();
+                    String line;
+                    while ((line = reader.readLine()) != null)
+                        buffer.append(line);
+                    resultJsonFeed += buffer.toString();
+                } else {
+                    for (int i = 1; i <= position; i++) {
+                        URL feedURL = new URL("http://195.88.209.17/app/static/hairstyle" + i + ".html");
+                        urlFeedConnection = (HttpURLConnection) feedURL.openConnection();
+                        urlFeedConnection.setRequestMethod("GET");
+                        urlFeedConnection.connect();
+                        InputStream inputStream = urlFeedConnection.getInputStream();
+                        reader = new BufferedReader(new InputStreamReader(inputStream));
+                        StringBuilder buffer = new StringBuilder();
+                        String line;
+                        while ((line = reader.readLine()) != null)
+                            buffer.append(line);
+                        resultJsonFeed += buffer.toString();
+                        resultJsonFeed = resultJsonFeed.replace("][", ",");
+                    }
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            return resultJsonFeed;
+        }
+
+        @Override
+        protected void onPostExecute(String resultJsonFeed) {
+            super.onPostExecute(resultJsonFeed);
+
+            try {
+                JSONArray items = new JSONArray(resultJsonFeed);
+                for (int i = 0; i < items.length(); i++) {
+                    JSONObject item = items.getJSONObject(i);
+                    List<String> images = new ArrayList<>();
+                    List<String> hashTags = new ArrayList<>();
+
+                    for (int j = 0; j < 10; j++)
+                        if (!item.getString("screen" + j).equals("empty.jpg"))
+                            images.add(item.getString("screen" + j));
+
+                    String[] tempTags;
+                    if (Storage.getString("Localization", "").equals("English")) {
+                        tempTags = item.getString("tags").split(",");
+                        Collections.addAll(hashTags, tempTags);
+                    } else if (Storage.getString("Localization", "").equals("Russian")) {
+                        tempTags = item.getString("tagsRu").split(",");
+                        Collections.addAll(hashTags, tempTags);
+                    }
+
+                    if (item.getString("published").equals("t")) {
+                        HairstyleDTO hairstyleDTO = new HairstyleDTO(
+                                item.getLong("id"),
+                                item.getString("uploadDate"),
+                                item.getString("authorName"),
+                                item.getString("authorPhoto"),
+                                item.getString("hairstyleType"),
+                                images,
+                                hashTags,
+                                item.getLong("likes"),
+                                item.getString("length"),
+                                item.getString("type"),
+                                item.getString("for"));
+                        data.add(hairstyleDTO);
+                    }
+                }
+                FireAnal.sendString("1", "Open", "HairstyleFeedLoaded");
+            } catch (JSONException e) {
+                e.printStackTrace();
             }
         }
     }
